--- a/package.json
+++ b/package.json
@@ -15,16 +15,28 @@
   },
   "dependencies": {
     "@aws-sdk/client-sns": "^3.609.0",
+    "@dcl/catalyst-contracts": "^4.4.1",
+    "@dcl/platform-server-commons": "^0.0.4",
     "@dcl/schemas": "^11.10.4",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/interfaces": "^1.4.3",
     "@well-known-components/logger": "^3.1.3",
-    "@well-known-components/metrics": "^2.1.0"
+    "@well-known-components/metrics": "^2.1.0",
+    "@well-known-components/pg-component": "^0.2.3",
+    "@well-known-components/thegraph-component": "^1.6.0",
+    "cron": "^3.1.7"
   },
   "devDependencies": {
     "@dcl/eslint-config": "^2.2.1",
     "@types/node": "^20.14.9",
     "@well-known-components/test-helpers": "^1.5.6",
     "typescript": "^5.5.3"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 2
   }
 }
