--- a/.env.default
+++ b/.env.default
@@ -11,6 +11,9 @@ HTTP_SERVER_PORT=5002
 HTTP_SERVER_HOST=0.0.0.0
 ENV=
 
+# Needed to run migrations
+CONNECTION_STRING=''
+
 PG_COMPONENT_PSQL_PORT=''
 PG_COMPONENT_PSQL_HOST=''
 PG_COMPONENT_PSQL_DATABASE=''
