--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node --trace-warnings --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
+    "migrate": "./node_modules/.bin/node-pg-migrate --envPath ./.env.local --tsconfig ./tsconfig.json -j ts -m ./src/migrations -d CONNECTION_STRING",
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose --passWithNoTests",
     "rundb:local": "docker-compose up -d && docker exec blockchain_event_notifier_db bash -c \"until pg_isready; do sleep 1; done\" && sleep 5",
     "lint:check": "yarn workspaces run lint:check",
@@ -31,6 +32,7 @@
     "@dcl/eslint-config": "^2.2.1",
     "@types/node": "^20.14.9",
     "@well-known-components/test-helpers": "^1.5.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
   "prettier": {
