--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "Apache-2.0",
   "private": true,
   "engines": {
-    "node": "18.*",
+    "node": "18.* || 20.*",
     "npm": "8.* || 9.*"
   },
   "scripts": {
