--- a/package.json
+++ b/package.json
@@ -3,28 +3,43 @@
   "license": "Apache-2.0",
   "private": true,
   "engines": {
-    "node": "18.*",
+    "node": "18.* || 20.*",
     "npm": "8.* || 9.*"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node --trace-warnings --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
+    "migrate": "./node_modules/.bin/node-pg-migrate --envPath ./.env.local --tsconfig ./tsconfig.json -j ts -m ./src/migrations -d CONNECTION_STRING",
     "test": "jest --forceExit --detectOpenHandles --coverage --verbose --passWithNoTests",
-    "lint:check": "yarn workspaces run lint:check",
-    "lint:fix": "yarn workspaces run lint:fix"
+    "rundb:local": "docker-compose up -d && docker exec blockchain_event_notifier_db bash -c \"until pg_isready; do sleep 1; done\" && sleep 5",
+    "lint:check": "eslint '**/*.{js,ts}'",
+    "lint:fix": "eslint '**/*.{js,ts}' --fix"
   },
   "dependencies": {
     "@aws-sdk/client-sns": "^3.609.0",
+    "@dcl/catalyst-contracts": "^4.4.1",
+    "@dcl/platform-server-commons": "^0.0.4",
     "@dcl/schemas": "^11.10.4",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/interfaces": "^1.4.3",
     "@well-known-components/logger": "^3.1.3",
-    "@well-known-components/metrics": "^2.1.0"
+    "@well-known-components/metrics": "^2.1.0",
+    "@well-known-components/pg-component": "^0.2.3",
+    "@well-known-components/thegraph-component": "^1.6.0",
+    "cron": "^3.1.7"
   },
   "devDependencies": {
     "@dcl/eslint-config": "^2.2.1",
     "@types/node": "^20.14.9",
     "@well-known-components/test-helpers": "^1.5.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 2
   }
 }
