feat: use schemas and expose CollectionCreated event

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@aws-sdk/client-sns": "^3.609.0",
     "@dcl/catalyst-contracts": "^4.4.1",
     "@dcl/platform-server-commons": "^0.0.4",
-    "@dcl/schemas": "^11.10.5",
+    "@dcl/schemas": "https://sdk-team-cdn.decentraland.org/@dcl/schemas/branch/feat/catalyst-deployments/dcl-schemas-12.0.1-9995236454.commit-83c58c7.tgz",
     "@well-known-components/env-config-provider": "^1.2.0",
+    "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.4.3",
     "@well-known-components/logger": "^3.1.3",
     "@well-known-components/metrics": "^2.1.0",
