chore: CI/CD pipelines

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,5 +7,5 @@ jobs:
   pr:
     uses: decentraland/platform-actions/.github/workflows/apps-pr.yml@main
     with:
-      service-name: worlds-content-server
+      service-name: events-notifier
     secrets: inherit
