chore: remove old graph urls from env

--- a/.env.default
+++ b/.env.default
@@ -23,10 +23,10 @@ PG_COMPONENT_PSQL_PASSWORD=''
 MARKETPLACE_BASE_URL=https://decentraland.org/marketplace
 
 NETWORK=mainnet
-MARKETPLACE_SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/decentraland/marketplace
-COLLECTIONS_L2_SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/decentraland/collections-matic-mainnet
-RENTALS_SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/decentraland/rentals-ethereum-mainnet
-LAND_MANAGER_SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/decentraland/land-manager
+# MARKETPLACE_SUBGRAPH_URL=
+# COLLECTIONS_L2_SUBGRAPH_URL=
+# RENTALS_SUBGRAPH_URL=
+# LAND_MANAGER_SUBGRAPH_URL=
 
 AWS_SNS_ARN=''
 AWS_SNS_ENDPOINT=''
