--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aws-sdk/client-sns": "^3.609.0",
     "@dcl/catalyst-contracts": "^4.4.1",
+    "@dcl/crypto": "^3.4.5",
     "@dcl/platform-server-commons": "^0.0.4",
     "@dcl/schemas": "^13.12.0",
     "@well-known-components/env-config-provider": "^1.2.0",
