--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-sns": "^3.609.0",
     "@dcl/catalyst-contracts": "^4.4.1",
     "@dcl/crypto": "^3.4.5",
+    "@dcl/platform-crypto-middleware": "^1.1.0",
     "@dcl/platform-server-commons": "^0.0.4",
     "@dcl/schemas": "^13.12.0",
     "@well-known-components/env-config-provider": "^1.2.0",
@@ -28,7 +29,8 @@
     "@well-known-components/metrics": "^2.1.0",
     "@well-known-components/pg-component": "^0.2.3",
     "@well-known-components/thegraph-component": "^1.6.0",
-    "cron": "^3.1.7"
+    "cron": "^3.1.7",
+    "decentraland-crypto-middleware": "^1.3.0"
   },
   "devDependencies": {
     "@dcl/eslint-config": "^2.2.1",
