--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@dcl/catalyst-contracts": "^4.4.2",
     "@dcl/crypto": "^3.4.5",
     "@dcl/platform-server-commons": "^0.0.4",
-    "@dcl/schemas": "^14.0.0",
+    "@dcl/schemas": "https://sdk-team-cdn.decentraland.org/@dcl/schemas/branch/feat/multiple-timestamps-on-client-events/dcl-schemas-16.0.1-13812753145.commit-5cf4966.tgz",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.4.3",
