feat: accept events directly from Explorer as well

--- a/.env.default
+++ b/.env.default
@@ -31,3 +31,8 @@ NETWORK=mainnet
 AWS_SNS_ARN=''
 AWS_SNS_ENDPOINT=''
 AWS_SQS_ENDPOINT=''
+
+# Authentication keys
+SEGMENT_SIGNING_KEY=''
+SEGMENT_WRITE_KEY=''
+EXPLORER_CLIENT_KEY=''
