feat: add ws server and endpoint to get the event

--- a/.env.default
+++ b/.env.default
@@ -23,10 +23,10 @@ PG_COMPONENT_PSQL_PASSWORD=''
 MARKETPLACE_BASE_URL=https://decentraland.org/marketplace
 
 NETWORK=mainnet
-# MARKETPLACE_SUBGRAPH_URL=
-# COLLECTIONS_L2_SUBGRAPH_URL=
-# RENTALS_SUBGRAPH_URL=
-# LAND_MANAGER_SUBGRAPH_URL=
+MARKETPLACE_SUBGRAPH_URL=https://subgraph.decentraland.zone/marketplace
+COLLECTIONS_L2_SUBGRAPH_URL=https://subgraph.decentraland.org/collections-matic-amoy
+RENTALS_SUBGRAPH_URL=https://subgraph.decentraland.zone/rentals-ethereum-sepolia
+LAND_MANAGER_SUBGRAPH_URL=https://subgraph.decentraland.zone/land-manager-sepolia
 
 AWS_SNS_ARN=''
 AWS_SNS_ENDPOINT=''
