--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@well-known-components/metrics": "^2.1.0",
     "@well-known-components/pg-component": "^0.2.3",
     "@well-known-components/thegraph-component": "^1.6.0",
-    "cron": "^3.1.7"
+    "@well-known-components/uws-http-server": "^0.0.2",
+    "cron": "^3.1.7",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@dcl/eslint-config": "^2.2.1",
     "@types/node": "^20.14.9",
+    "@types/ws": "^8.18.1",
     "@well-known-components/test-helpers": "^1.5.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
