--- a/.env.default
+++ b/.env.default
@@ -11,14 +11,16 @@ HTTP_SERVER_PORT=5002
 HTTP_SERVER_HOST=0.0.0.0
 ENV=
 
+WS_SERVER_PORT=5003
+
 # Needed to run migrations
 CONNECTION_STRING=''
 
-PG_COMPONENT_PSQL_PORT=''
-PG_COMPONENT_PSQL_HOST=''
-PG_COMPONENT_PSQL_DATABASE=''
-PG_COMPONENT_PSQL_USER=''
-PG_COMPONENT_PSQL_PASSWORD=''
+PG_COMPONENT_PSQL_PORT=5455
+PG_COMPONENT_PSQL_HOST=0.0.0.0
+PG_COMPONENT_PSQL_DATABASE=blockchain_event_notifier_db
+PG_COMPONENT_PSQL_USER=postgres
+PG_COMPONENT_PSQL_PASSWORD=pass1234
 
 MARKETPLACE_BASE_URL=https://decentraland.org/marketplace
 
